# macchk

./: .gitignore  Cargo.toml  README.md
.github/workflows/: pages.yml
demo/: README.md  index.html  package-lock.json  package.json  rsbuild.config.ts  tsconfig.json
demo/src/: main.ts  style.css
docs/: architecture.md  entitlements.md
docs/checks/: codesign.md  header.md  instructions.md  load-commands.md  sections.md  symbols.md
src/: binary.rs  codesign_parser.rs  constraint_parser.rs  entitlements_db.rs  lib.rs  main.rs  types.rs  wasm.rs
src/detection/: codesign.rs  header.rs  load_commands.rs  mod.rs  sections.rs  symbols.rs
src/detection/instructions/: arm64.rs  mod.rs  x86_64.rs
src/output/: brief.rs  json.rs  mod.rs  table.rs
tests/: detection_tests.rs
tests/fixtures/: Makefile
tests/fixtures/src/: exp10_restrict.c  exp11_canary.c  exp12_hardened_runtime.c  exp13_sanitizers.c  exp14_jump_table.c  exp1_stack_zero.c  exp2_ptrauth.c  exp3_bounds_safety.c  exp4_cpp_bounds.cpp  exp5_warnings.c  exp6_typed_alloc.c  exp7_fortify.c  exp8_objc_arc.m  exp9_swift.swift  exp_mte_intrinsics.c  exp_mte_stack.c
