[package]
name = "macchk"
version = "0.1.0"
edition = "2021"
description = "checksec for Mach-O"

[dependencies]
goblin = "0.9"
capstone = "0.13"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
plist = "1"
scroll = "0.12"
colored = "2"
memmap2 = "0.9"
anyhow = "1"
