[package]
name = "macchk"
version = "0.1.0"
edition = "2021"
description = "checksec for Mach-O"

[features]
x86_64 = ["dep:capstone"]

[dependencies]
goblin = "0.9"
capstone = { version = "0.13", optional = true }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
plist = "1"
scroll = "0.12"
colored = "2"
memmap2 = "0.9"
anyhow = "1"
