[package]
name = "macchk"
version = "0.1.0"
edition = "2021"
description = "checksec for Mach-O"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
x86_64 = ["dep:capstone"]
wasm = ["dep:wasm-bindgen"]

[dependencies]
goblin = "0.9"
capstone = { version = "0.13", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
plist = "1"
scroll = "0.12"
anyhow = "1"
wasm-bindgen = { version = "0.2", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
memmap2 = "0.9"
